--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@diavrank/fcm-notification": "^2.3.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "firebase-admin": "^11.9.0",
     "googleapis": "^118.0.0",
     "mongoose": "^7.0.2",
     "multer": "^1.4.5-lts.1",
